Just the content grid left to do now

--- a/index.html
+++ b/index.html
@@ -10,19 +10,59 @@
 <body>
     <main>
         <div class="sidebar">
-            <div class="header-title">
-                <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                    <image href="images/ab-testing.svg" width="40" height="40" />
+            <div class="sidebar-title">
+                <svg width="5rem" height="5rem" xmlns="http://www.w3.org/2000/svg">
+                    <image href="images/ab-testing.svg" width="5rem" height="5rem" fill="white"/>
                 </svg>
                 <h2>Dashboard</h2>
             </div>
+            <div class="sidebar-user-nav">
+                <h3><a href="">Home</a></h3>
+                <h3><a href="">Profile</a></h3>
+                <h3><a href="">Messages</a></h3>
+                <h3><a href="">History</a></h3> 
+                <h3><a href="">Tasks</a></h3>
+                <h3><a href="">Communities</a></h3>
+            </div>
         </div>
         <div class="header">
-            <div class="header-title">
-                <svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
-                    <image href="images/ab-testing.svg" width="40" height="40" />
-                </svg>
-                <h2>CR-2210</h2>
+            <div class="header-top">
+                <div class="header-top-left">
+                    <svg width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg">
+                        <image href="images/magnify.svg" width="2rem" height="2rem" />
+                    </svg>
+                    <input type="text" name="searchbar" id="searchbar">
+                </div> 
+                <div class="header-top-right">
+                    <svg width="2rem" height="2rem" xmlns="http://www.w3.org/2000/svg">
+                        <image href="images/bell-ring.svg" width="2rem" height="2rem" />
+                    </svg>
+                    <svg width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
+                        <image href="images/Circle-icons-gamecontroller.svg.png " width="3rem" height="3rem" />
+                    </svg>
+                    <h2>CR-2210</h2>
+                </div>
+            </div>
+            <div class="header-bottom">
+                <div  class="header-bottom-left">
+                    <svg width="3rem" height="3rem" xmlns="http://www.w3.org/2000/svg">
+                        <image href="images/Circle-icons-gamecontroller.svg.png " width="3rem" height="3rem" />
+                    </svg>
+                    <h2>CR-2210</h2>
+                </div>
+                <div class="header-bottom-right">
+                    <div class="header-buttons">
+                        <button id="">
+                            New
+                        </button>
+                        <button>
+                            Upload
+                        </button>
+                        <button>
+                            Share
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="content-container">
